--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
   "name": "crack9527/swoft-cache",
   "type": "library",
   "require": {
-    "swoft/framework": "~2.0.0"
+    "swoft/framework": "~2.0.0",
+    "swoft/swoole-ide-helper": "^4.4",
+    "swoft/redis": "~2.0.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^7.5"
